Modify brand creation
